--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+
 .answer-button {
     width: 100%;
     height: 50px;
@@ -27,3 +28,6 @@
     margin-bottom: 15px;
 }
 
+#timer {
+    font-size: 100px;
+}
