--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,17 @@
-
-.answer-button {
-    width: 100%;
+.answer-btn {
+    width: 100% !important;
     height: 50px;
-    background: white;
     margin-bottom: 15px;
+    font-size: 25px;
+    
+}
+
+.btn-light {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 15px;
+  border: 1px solid lightgrey;
+
 }
 /* 
 .answer-button:hover {
@@ -12,26 +20,45 @@
     margin-bottom: 15px;
 } */
 
+.container {
+    background: whitesmoke;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    padding: 2rem;
+    box-shadow: 0px 0px 20px lightgrey; 
+    height: auto;
+    max-height: 40%;
+    margin-top: 20%;
+}
 
 .correct-answer {
-    width: 100%;
-    height: 50px;
-    background: rgba(98, 244, 66, .5);
-    margin-bottom: 15px;
+  width: 100%;
+  height: 50px;
+  background: rgba(98, 244, 66, 0.5);
+  margin-bottom: 15px;
 }
 
-
-.wrong-answer {
-    width: 100%;
-    height: 50px;
-    background: rgba(255, 72, 48, .3);
-    margin-bottom: 15px;
-}
-
-#timer {
-    font-size: 100px;
-}
 
 .hide {
     display: none;
+  }
+  
+
+.start-button {
+    width: 150px;
+    font-size: 30px;
+}
+.wrong-answer {
+  width: 100%;
+  height: 50px;
+  background: rgba(255, 72, 48, 0.3);
+  margin-bottom: 15px;
+}
+
+#timer {
+  font-size: 100px;
+}
+
+#question {
+    font-size: 35px;
 }
