--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+
+body {
+    background-image: url(../images/skulls.png)
+}
+
+
 .answer-btn {
     width: 100% !important;
     height: 50px;
@@ -48,11 +54,19 @@
     width: 150px;
     font-size: 30px;
 }
-.wrong-answer {
+.btn-danger {
   width: 100%;
   height: 50px;
-  background: rgba(255, 72, 48, 0.3);
+  background: rgba(172, 37, 19, 0.705);
   margin-bottom: 15px;
+}
+
+#final-score {
+    font-size: 40px;
+}
+
+#play-again {
+    font-size: 30px;
 }
 
 #timer {
