--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,9 @@ body {
     box-shadow: 0px 0px 20px lightgrey; 
     height: auto;
     max-height: 40%;
-    margin-top: 20%;
+    margin-top: 10%;
+    width: 100%;
+    max-width: 600px;
 }
 
 .correct-answer {
@@ -76,3 +78,9 @@ body {
 #question {
     font-size: 35px;
 }
+
+@media (max-width: 700px) {
+    .btn-light:hover {
+        background-color: #f8f9fa;
+    }
+} 
