--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,4 +83,26 @@ body {
     .btn-light:hover {
         background-color: #f8f9fa;
     }
+
+.btn-light:focus, .btn-light.focus {
+    box-shadow: 0 0 0 0;
+  }
+  
+  .btn-light.disabled, .btn-light:disabled {
+    
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+  }
+  
+  .btn-light:not(:disabled):not(.disabled):active, .btn-light:not(:disabled):not(.disabled).active,
+  .show > .btn-light.dropdown-toggle {
+    
+    background-color: #f8f9fa;
+    border-color:  #f8f9fa;
+  }
+  
+  .btn-light:not(:disabled):not(.disabled):active:focus, .btn-light:not(:disabled):not(.disabled).active:focus,
+  .show > .btn-light.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0;
+  }
 } 
