--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     width: 100% !important;
     height: 50px;
     margin-bottom: 15px;
-    font-size: 25px;
+    font-size: 1.5rem;
     
 }
 
@@ -72,7 +72,7 @@ body {
 }
 
 #timer {
-  font-size: 100px;
+  font-size: 3rem;
 }
 
 #question {
